crates/ai/tests/snapshots/tool_schemas__snapshot_compare_basket.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "compare_basket",
  "parameters": {
    "properties": {
      "basis": {
        "enum": [
          "adjclose",
          "close"
        ],
        "type": "string"
      },
      "benchmarks": {
        "items": {
          "type": "string"
        },
        "maxItems": 5,
        "type": "array"
      },
      "endDate": {
        "type": "string"
      },
      "positions": {
        "items": {
          "properties": {
            "symbol": {
              "type": "string"
            },
            "weight": {
              "type": "number"
            }
          },
          "required": [
            "symbol",
            "weight"
          ],
          "type": "object"
        },
        "maxItems": 10,
        "minItems": 1,
        "type": "array"
      },
      "samplePoints": {
        "maximum": 120,
        "minimum": 0,
        "type": "integer"
      },
      "startDate": {
        "type": "string"
      }
    },
    "required": [
      "positions"
    ],
    "type": "object"
  }
}
