crates/ai/tests/snapshots/tool_schemas__snapshot_delete_portfolio_scenario.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "delete_portfolio_scenario",
  "parameters": {
    "properties": {
      "id": {
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  }
}
