crates/ai/tests/snapshots/tool_schemas__snapshot_get_portfolio_scenario.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_portfolio_scenario",
  "parameters": {
    "properties": {
      "id": {
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  }
}
