crates/ai/tests/snapshots/tool_schemas__snapshot_get_quote.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_quote",
  "parameters": {
    "properties": {
      "assetId": {
        "type": "string"
      },
      "basis": {
        "enum": [
          "adjclose",
          "close"
        ],
        "type": "string"
      },
      "date": {
        "type": "string"
      },
      "symbol": {
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
