crates/ai/tests/snapshots/tool_schemas__snapshot_list_portfolio_scenarios.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "list_portfolio_scenarios",
  "parameters": {
    "properties": {},
    "required": [],
    "type": "object"
  }
}
